syntax="proto2";

option optimize_for=SPEED;

package aap_protobuf.service.wifiprojection.message;

message WifiCredentialsRequest {

}