syntax="proto2";

option optimize_for=SPEED;

import "aap_protobuf/service/wifiprojection/message/AccessPointType.proto";
import "aap_protobuf/service/wifiprojection/message/WifiSecurityMode.proto";


package aap_protobuf.service.wifiprojection.message;

message WifiCredentialsResponse {
  optional string car_wifi_password = 1;
  optional WifiSecurityMode car_wifi_security_mode = 2;
  optional string car_wifi_ssid = 3;
  repeated int32 supported_wifi_channels = 4;
  optional AccessPointType access_point_type = 5;
}